--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "mongodb": "^4.1.0",
     "next": "^11.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
